manifests/nginx/nginx-loadBalancer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels: 
    app: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
